JRD - Fix SonarQube issue in master (#262)
* fix:SonarQube issues

* fix:Added test coverage

* fix:Added test for JrdConstants

* fix:checkStyle issue

* fix:PR review comments

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>